
- also search for table-script replacements (i.e. external .vbs with the same/table name) in the "Scripts" folder to match the core script behavior
- when modifying the table-script, check if it was loaded from an external .vbs, and if yes, then save the modifications to that file (and only optionally to the .vpx table itself)

- tweak flipper shadows (via script) implementation in the example/blank table

- update BASS library to latest 2.4.15
- script editor updated to use latest scintilla library 4.4.4 (custom build)

- see Changelog_Scripts.txt for the respective core script changes (version 3.58)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes
- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

- add Clang (via Visual Studio 2019) support, still has a linking prob with 32bit though

- update FreeImage library to latest 3.18.0 (custom build) (currently disabled)
- DirectX 8 port for input handling (currently disabled)

VP 10.6.1 Changelog
------------------------

- fix hang on player exit on some setups

VP 10.6.0 Changelog
------------------------

FEATURES:

- add support for using a primitive as playfield instead of the build-in one:
    o to create a mesh playfield create a new blank table and export it as obj file
    o open the obj file in Blender and edit the playfield mesh (mesh name is "Table1")
    o cut holes into the playfield where you want to place kickers, VUKs and so on
    o export the modified playfield mesh as a separate obj file and import it to VPX
    o in VPX rename the playfield primitive to "playfield_mesh"
    o the playfield primitive doesn't need an image and a material assigned
      VPX will use the texture and material from the playfield properties, but will respect the 'disable lighting' parameter from the primitive
